--- a/index.htm
+++ b/index.htm
@@ -6,31 +6,38 @@
     <title>Thème gr2</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="entete" class="global">
         <header class="entete__header">
-            <h1>Thème du groupe #2</h1>
+            <h1>Thème d'Alexander(h1)</h1>
         </header>
     </div>
     <div id="accueil" class="global">
         <section class="accueil__section">
-            <h2>Accueil</h2>
+            <h2>Accueil(h2)</h2>
         </section>
     </div>
     <div id="galerie" class="global">
         <section class="galerie__section">
-            <h2>Galerie</h2>
+            <h2>Galerie(h2)</h2>
         </section>
     </div>
     <div id="evenement" class="global">
         <section class="evenement__section">
-            <h2>Événement</h2>
+            <h2>Événement(h2)</h2>
         </section>
     </div>
     <div id="footer" class="global">
         <footer class= "footer__section">
             <h2>Footer</h2>
+            <h3>Liens(h3)</h3>
+            <h4>Liens(h4)</h4>
+            <h5>Liens(h5)</h5>
+
         </footer>
     </div>
 </body>
