--- a/index.htm
+++ b/index.htm
@@ -13,15 +13,22 @@
 <body>
     <div id="entete" class="global">
         <header class="entete__header">
-            <h1>Thème d'Alexander(h1)</h1>
+            <h1>Thème d'Alexander</h1>
+            <h2>Conception d'interface web</h2>
+            <h3>et développement</h3>
         </header>
+        <div class="vague">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" style="fill:var(--couleur-arriere-accueil)"></path>
+            </svg>
+        </div>
     </div>
     <div id="accueil" class="global">
         <section class="accueil__section">
             <h2>Accueil(h2)</h2>
         </section>
     </div>
-    <div id="galerie" class="global">
+    <div id="galerie" class="global diagonal">
         <section class="galerie__section">
             <h2>Galerie(h2)</h2>
         </section>
@@ -30,6 +37,11 @@
         <section class="evenement__section">
             <h2>Événement(h2)</h2>
         </section>
+        <div class="vague">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" style="fill:var(--couleur-arriere-footer)"></path>
+            </svg>
+        </div>
     </div>
     <div id="footer" class="global">
         <footer class= "footer__section">
