--- a/index.htm
+++ b/index.htm
@@ -25,19 +25,19 @@
     </div>
     <div id="accueil" class="global">
         <section class="accueil__section">
-            <h2>Accueil(h2)</h2>
+            <h2>Accueil</h2>
         </section>
     </div>
     <div id="galerie" class="global diagonal">
         <section class="galerie__section">
-            <h2>Galerie(h2)</h2>
+            <h2>Galerie</h2>
         </section>
     </div>
     <div id="evenement" class="global">
         <section class="evenement__section">
-            <h2>Événement(h2)</h2>
+            <h2>Événement</h2>
             <div>
-                <blockquote>Blockquote</blockquote>
+                <blockquote>Bienvenue au TIM! Le programme de Techniques d'Intégration Multimédia est une formation qui vise à développer les compétences nécessaires pour concevoir, créer et intégrer des contenus multimédias variés. Il combine généralement des aspects de la conception graphique, de la programmation, de la vidéo, de l'audio et d'autres éléments multimédias.</blockquote>
             </div>
         </section>
         <div class="vague">
@@ -54,7 +54,7 @@
             <div class="footer__content">
                 
                 <div class="footer__column">
-                    <h3>Liens (h3)</h3>
+                    <h4>Liens (h4)</h4>
                     <ul>
                         <li><a href="#">Lien 1</a></li>
                         <li><a href="#">Lien 2</a></li>
@@ -70,7 +70,7 @@
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h5>Liens (h5)</h5>
+                    <h4>Liens (h4)</h4>
                     <ul>
                         <li><a href="#">Lien 7</a></li>
                         <li><a href="#">Lien 8</a></li>
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h6>Liens (h6)</h6>
+                    <h4>Liens (h4)</h4>
                     <ul>
                         <li><a href="#">Lien 10</a></li>
                         <li><a href="#">Lien 11</a></li>
