S2C2: Ajustement des couleurs dans le foote pour respecter la règle 60-30-10. J'ai changé la couleur des liens a et du bouton pour que l'utilisateur sache que ce sont des éléments cliquables

--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
             <div class="footer__content">
                 
                 <div class="footer__column">
-                    <h4>Liens (h4)</h4>
+                    <h4>Liens</h4>
                     <ul>
                         <li><a href="#">Lien 1</a></li>
                         <li><a href="#">Lien 2</a></li>
@@ -62,7 +62,7 @@
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h4>Liens (h4)</h4>
+                    <h4>Liens</h4>
                     <ul>
                         <li><a href="#">Lien 4</a></li>
                         <li><a href="#">Lien 5</a></li>
@@ -70,7 +70,7 @@
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h4>Liens (h4)</h4>
+                    <h4>Liens</h4>
                     <ul>
                         <li><a href="#">Lien 7</a></li>
                         <li><a href="#">Lien 8</a></li>
@@ -78,15 +78,12 @@
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h4>Liens (h4)</h4>
+                    <h4>Liens</h4>
                     <ul>
                         <li><a href="#">Lien 10</a></li>
                         <li><a href="#">Lien 11</a></li>
                         <li><a href="#">Lien 12</a></li>
                     </ul>
-                </div>
-                <div class="footer__column">
-                    <a href="#">Lien (a)</a>
                 </div>
                 <div class="footer__column">
                     <button>Bouton (button)</button>
