S2C2: Ajout d'un paragraphe avec du texte expliquant ce que j'aime du programme

--- a/index.htm
+++ b/index.htm
@@ -31,6 +31,7 @@
     <div id="galerie" class="global diagonal">
         <section class="galerie__section">
             <h2>Galerie</h2>
+            <p>Ça fait depuis 2 ans que je suis au TIM et j'aime beaucoup le programme et les personnes dans le programme. Je veux vraiment devenir un dveloppeur de jeu.</p>
         </section>
     </div>
     <div id="evenement" class="global">
