--- a/index.htm
+++ b/index.htm
@@ -14,8 +14,9 @@
     <div id="entete" class="global">
         <header class="entete__header">
             <h1>Thème d'Alexander</h1>
-            <h2>Conception d'interface web</h2>
-            <h3>et développement</h3>
+            <h2>4W4 - Conception d'interface <span>et développement web</span></h2>
+            <h3>TIM - Collège de Maisonneuve</h3>
+            <button>Évenements</button>
         </header>
         <div class="vague">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
