--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,7 @@
     <div id="accueil" class="global">
         <section class="accueil__section">
             <h2>Accueil</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam magni amet praesentium eveniet quo deserunt veniam aliquam similique sequi id, eos laboriosam alias in, libero suscipit optio assumenda est dolore?</p>
         </section>
     </div>
     <div id="galerie" class="global diagonal">
@@ -41,6 +42,7 @@
             <div>
                 <blockquote>Bienvenue au TIM! Le programme de Techniques d'Intégration Multimédia est une formation qui vise à développer les compétences nécessaires pour concevoir, créer et intégrer des contenus multimédias variés. Il combine généralement des aspects de la conception graphique, de la programmation, de la vidéo, de l'audio et d'autres éléments multimédias.</blockquote>
             </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, earum!</p>
         </section>
         <div class="vague">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -58,33 +60,33 @@
                 <div class="footer__column">
                     <h4>Liens</h4>
                     <ul>
-                        <li><a href="#">Lien 1</a></li>
-                        <li><a href="#">Lien 2</a></li>
-                        <li><a href="#">Lien 3</a></li>
+                        <li><a href="entete">Lien 1</a></li>
+                        <li><a href="entete">Lien 2</a></li>
+                        <li><a href="entete">Lien 3</a></li>
                     </ul>
                 </div>
                 <div class="footer__column">
                     <h4>Liens</h4>
                     <ul>
-                        <li><a href="#">Lien 4</a></li>
-                        <li><a href="#">Lien 5</a></li>
-                        <li><a href="#">Lien 6</a></li>
+                        <li><a href="entete">Lien 4</a></li>
+                        <li><a href="entete">Lien 5</a></li>
+                        <li><a href="entete">Lien 6</a></li>
                     </ul>
                 </div>
                 <div class="footer__column">
                     <h4>Liens</h4>
                     <ul>
-                        <li><a href="#">Lien 7</a></li>
-                        <li><a href="#">Lien 8</a></li>
-                        <li><a href="#">Lien 9</a></li>
+                        <li><a href="entete">Lien 7</a></li>
+                        <li><a href="entete">Lien 8</a></li>
+                        <li><a href="entete">Lien 9</a></li>
                     </ul>
                 </div>
                 <div class="footer__column">
                     <h4>Liens</h4>
                     <ul>
-                        <li><a href="#">Lien 10</a></li>
-                        <li><a href="#">Lien 11</a></li>
-                        <li><a href="#">Lien 12</a></li>
+                        <li><a href="entete">Lien 10</a></li>
+                        <li><a href="entete">Lien 11</a></li>
+                        <li><a href="entete">Lien 12</a></li>
                     </ul>
                 </div>
                 <div class="footer__column">
