S3C2: Ajout de nouveaux blockquotes et de nouveaux paragraphes. Amélioration du nouveau design des blockquotes

--- a/index.htm
+++ b/index.htm
@@ -27,13 +27,15 @@
     <div id="accueil" class="global">
         <section class="accueil__section">
             <h2>Accueil</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam magni amet praesentium eveniet quo deserunt veniam aliquam similique sequi id, eos laboriosam alias in, libero suscipit optio assumenda est dolore?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore amet praesentium odio et quaerat assumenda id modi est nemo. Minus eum natus recusandae voluptates vel autem commodi velit harum soluta provident deserunt laborum libero totam, quae illo praesentium. Harum suscipit a amet porro sapiente? Pariatur similique, est soluta obcaecati rem reprehenderit laboriosam facilis aut fuga quas nisi corrupti doloremque eos dolorum ab perferendis, quibusdam iste? Dolores tempore incidunt quibusdam, similique blanditiis fugiat doloribus quaerat, magnam velit consectetur, fugit recusandae earum. Accusantium iure asperiores, sit repellat obcaecati ratione quos, consequuntur possimus sequi maiores mollitia repudiandae ipsum laboriosam, recusandae ex enim labore dolor architecto. Dicta distinctio minima consequatur in sint illo hic, ut aperiam? Omnis, facilis neque magni quasi magnam quibusdam expedita quisquam dicta sint officia nobis tenetur rem sequi in commodi at possimus. Ut, harum aperiam tempora nisi laudantium facilis quas totam deserunt sit voluptatum adipisci! Enim aspernatur iure, sapiente saepe ipsum aliquam blanditiis quae. Similique eum a corrupti, consectetur provident accusantium quasi voluptatum porro nihil voluptates nesciunt possimus, omnis iusto ducimus dignissimos et. Dicta, eius officia? Sequi vitae enim accusamus.</p>
+            <blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam magni amet praesentium eveniet quo deserunt veniam aliquam similique sequi id, eos laboriosam alias in, libero suscipit optio assumenda est dolore?</blockquote>
         </section>
     </div>
     <div id="galerie" class="global diagonal">
         <section class="galerie__section">
             <h2>Galerie</h2>
-            <p>Ça fait depuis 2 ans que je suis au TIM et j'aime beaucoup le programme et les personnes dans le programme. Je veux vraiment devenir un dveloppeur de jeu.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste aspernatur aperiam consequatur, quidem est facere tempora! Sit saepe id ut provident vero ea consectetur sequi aspernatur eaque neque, quae sapiente ab reiciendis, recusandae iusto. Recusandae incidunt explicabo, commodi ipsam ipsum reiciendis corporis. Eius voluptatem assumenda libero dolores cupiditate repudiandae voluptas dolor minima unde expedita? Obcaecati excepturi minus laudantium velit!</p>
+            <blockquote>Ça fait depuis 2 ans que je suis au TIM et j'aime beaucoup le programme et les personnes dans le programme. Je veux vraiment devenir un développeur de jeu.</pblockquote>
         </section>
     </div>
     <div id="evenement" class="global">
