S3C2: Ajout d'une classe sur le button de l'entête pour que ça affecte que ce button et non les autres

--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
             <h1>Thème d'Alexander</h1>
             <h2>4W4 - Conception d'interface <span>et développement web</span></h2>
             <h3>TIM - Collège de Maisonneuve</h3>
-            <button>Évenements</button>
+            <button class="entete__button">Évenements</button>
         </header>
         <div class="vague">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
