--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
             <form action="" class="recherche">
                 <input type="search" name="" id="" class="recherche__input" placeholder="recherche">
                 <button class="recherche__button">
-                    <svg data-src="https://s2.svgbox.net/hero-solid.svg?ic=search" width="32" height="32" color="#000"></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" color="#000"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
                 </button>
             </form>
             <div class="sociaux">
@@ -100,9 +100,6 @@
                         <li><a href="entete">Lien 11</a></li>
                         <li><a href="entete">Lien 12</a></li>
                     </ul>
-                </div>
-                <div class="footer__column">
-                    <button>Bouton (button)</button>
                 </div>
             </div>
         </footer>
