--- a/index.htm
+++ b/index.htm
@@ -29,6 +29,7 @@
             <h2>Accueil</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore amet praesentium odio et quaerat assumenda id modi est nemo. Minus eum natus recusandae voluptates vel autem commodi velit harum soluta provident deserunt laborum libero totam, quae illo praesentium. Harum suscipit a amet porro sapiente? Pariatur similique, est soluta obcaecati rem reprehenderit laboriosam facilis aut fuga quas nisi corrupti doloremque eos dolorum ab perferendis, quibusdam iste? Dolores tempore incidunt quibusdam, similique blanditiis fugiat doloribus quaerat, magnam velit consectetur, fugit recusandae earum. Accusantium iure asperiores, sit repellat obcaecati ratione quos, consequuntur possimus sequi maiores mollitia repudiandae ipsum laboriosam, recusandae ex enim labore dolor architecto. Dicta distinctio minima consequatur in sint illo hic, ut aperiam? Omnis, facilis neque magni quasi magnam quibusdam expedita quisquam dicta sint officia nobis tenetur rem sequi in commodi at possimus. Ut, harum aperiam tempora nisi laudantium facilis quas totam deserunt sit voluptatum adipisci! Enim aspernatur iure, sapiente saepe ipsum aliquam blanditiis quae. Similique eum a corrupti, consectetur provident accusantium quasi voluptatum porro nihil voluptates nesciunt possimus, omnis iusto ducimus dignissimos et. Dicta, eius officia? Sequi vitae enim accusamus.</p>
             <blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam magni amet praesentium eveniet quo deserunt veniam aliquam similique sequi id, eos laboriosam alias in, libero suscipit optio assumenda est dolore?</blockquote>
+            <img src="./images/Logo_Chelsea.png" alt="Image d'accueil">
         </section>
     </div>
     <div id="galerie" class="global diagonal">
@@ -36,6 +37,11 @@
             <h2>Galerie</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste aspernatur aperiam consequatur, quidem est facere tempora! Sit saepe id ut provident vero ea consectetur sequi aspernatur eaque neque, quae sapiente ab reiciendis, recusandae iusto. Recusandae incidunt explicabo, commodi ipsam ipsum reiciendis corporis. Eius voluptatem assumenda libero dolores cupiditate repudiandae voluptas dolor minima unde expedita? Obcaecati excepturi minus laudantium velit!</p>
             <blockquote>Ça fait depuis 2 ans que je suis au TIM et j'aime beaucoup le programme et les personnes dans le programme. Je veux vraiment devenir un développeur de jeu.</pblockquote>
+            <select>
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+            </select>
         </section>
     </div>
     <div id="evenement" class="global">
@@ -45,6 +51,10 @@
                 <blockquote>Bienvenue au TIM! Le programme de Techniques d'Intégration Multimédia est une formation qui vise à développer les compétences nécessaires pour concevoir, créer et intégrer des contenus multimédias variés. Il combine généralement des aspects de la conception graphique, de la programmation, de la vidéo, de l'audio et d'autres éléments multimédias.</blockquote>
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, earum!</p>
+            <video controls width="400" height="300">
+                <source src="./videos/Match_Chelsea.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la balise vidéo.
+            </video>
         </section>
         <div class="vague">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
