--- a/index.htm
+++ b/index.htm
@@ -32,11 +32,11 @@
 <li id="menu-item-79" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-79"><a href="http://localhost:8080/4w4/category/zen/">Zen</a></li>
 </ul></nav>        </header>
     </div>
-<div id="entete" class="global">
+<div id="entete" class="global clr-agencement-primaire">
     <section class="entete__header">
         <!-- facebook -->
 
-        <div class="entete__header__texte">
+        <div class="entete__header__texte ">
             <h1 class="bgc-text">Explorez le Monde avec Notre Club de Voyage</h1>
             <h2 class="bgc-text">Votre club de voyage pour des aventures inoubliables. Rejoignez-nous !</h2>
             <h3 class="bgc-text">TIM - Collège de Maisonneuve</h3>
@@ -44,7 +44,7 @@
         <div class="entete__header__button"><button class="entete__button">Événements</button></div>
     </section>
 </div>
-<div id="accueil" class="global">
+<div id="accueil" class="global clr-agencement-primaire">
     <section class="accueil__section">
         <h2>Accueil (h2)</h2>
         <div class="section__voyage">
@@ -136,11 +136,10 @@
                 </div>
             
         </div>
-        <img src="./images/Logo_Chelsea.png" alt="Image d'accueil">
     </section>
 </div>
-<div id="galerie" class="global diagonal">
-    <section class="galerie__section">
+<div id="galerie" class="global">
+    <section class="galerie__section clr-agencement-primaire">
         <h2>Galerie</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste aspernatur aperiam consequatur, quidem est facere tempora! Sit saepe id ut provident vero ea consectetur sequi aspernatur eaque neque, quae sapiente ab reiciendis, recusandae iusto. Recusandae incidunt explicabo, commodi ipsam ipsum reiciendis corporis. Eius voluptatem assumenda libero dolores cupiditate repudiandae voluptas dolor minima unde expedita? Obcaecati excepturi minus laudantium velit!</p>
         <blockquote>Ça fait depuis 2 ans que je suis au TIM et j'aime beaucoup le programme et les personnes dans le programme. Je veux vraiment devenir un développeur de jeu.</pblockquote>
@@ -151,13 +150,12 @@
             </select>
     </section>
 </div>
-<div id="evenement" class="global">
+<div id="evenement" class="global clr-agencement-primaire">
     <section class="evenement__section">
         <h2>Événement</h2>
         <div>
             <blockquote>Bienvenue au TIM! Le programme de Techniques d'Intégration Multimédia est une formation qui vise à développer les compétences nécessaires pour concevoir, créer et intégrer des contenus multimédias variés. Il combine généralement des aspects de la conception graphique, de la programmation, de la vidéo, de l'audio et d'autres éléments multimédias.</blockquote>
         </div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, earum!</p>
         <video controls width="400" height="300">
             <source src="./videos/Match_Chelsea.mp4" type="video/mp4">
             Votre navigateur ne supporte pas la balise vidéo.
@@ -165,7 +163,7 @@
     </section>
 </div>
 
-<div id="footer" class="global">
+<div id="footer" class="global clr-agencement-primaire">
     <footer class="footer__section">
         <form action="" class="recherche">
             <input type="search" name="" id="" class="recherche__input" placeholder="recherche">
