--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="fontAwesome/css/font-awesome.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
