26 mars 2024: J'ai modifié la position des destinations populaire et j'ai rendu plus fluide les médias queries des destinations populaires. J'ai aussi amélioré le design des différentes catégories dans les cartes des destinations populaires. J'ai mis à jour le code dans index.html

--- a/index.htm
+++ b/index.htm
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -79,7 +76,7 @@
     </div>
     <div id="accueil" class="global clr-agencement-primaire">
         <section class="accueil__section">
-            <h2>Accueil (h2)</h2>
+            <h2>Accueil</h2>
             <div class="section__voyage">
                 <div class="carte">
                     <h4>Chamonix, France</h4>
